update: fix scroll top button z-index

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -205,6 +205,7 @@
   display:block;
   //opacity: 1.0;
   animation: fadeIn 2s;
+  z-index: 99;
 }
 
 @keyframes fadeIn {
